fix vertical alignment and fontsize

--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -184,15 +184,15 @@ H3-Amplification {
 
 .B2-Amplification {
   font-family: "dinot-regular";
-  // font-size: 13px;
-  font-size: 10px;
+  font-size: 13px;
+  // font-size: 10px;
   line-height: 15px;
 }
 
 .B2-M-Amplification {
   font-family: "dinot-medium";
-  font-size: 10px;
-  // font-size: 13px;
+  // font-size: 10px;
+  font-size: 13px;
   line-height: 15px;
 }
 
